--- a/FodboldApp/FodboldApp/FodboldApp/View/History.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/History.xaml
@@ -9,7 +9,7 @@
             <StackLayout.BindingContext>
                 <viewmodels:HistoryVM/>
             </StackLayout.BindingContext>
-            <Label Text="HISTORIK"  HorizontalOptions="FillAndExpand"
+            <Label Text="DIVERSE"  HorizontalOptions="FillAndExpand"
                    HorizontalTextAlignment="Center"
                    FontSize="Large"
                    HeightRequest="60"
@@ -66,21 +66,6 @@
                         <RowDefinition Height="25*" />
                     </Grid.RowDefinitions>
                     <BoxView Color="White" Grid.Column="0" Grid.RowSpan="1"/>
-                    <Image Source="tidligere_kampe.png" Grid.Row="0"/>
-                    <Label Text="Tidligere kampe" FontSize="Medium" TextColor="{StaticResource textColor}" HorizontalOptions="Center" Grid.Row="1" Grid.Column="0" VerticalOptions="Start"/>
-                    <Grid.GestureRecognizers>
-                        <TapGestureRecognizer Command="{Binding TempCommand}"/>
-                    </Grid.GestureRecognizers>
-                </Grid>
-                <!--===============================================================-->
-
-                <!--Fourth element in grid-->
-                <Grid Grid.Row="1" Grid.Column="1">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="75*" />
-                        <RowDefinition Height="25*" />
-                    </Grid.RowDefinitions>
-                    <BoxView Color="White" Grid.Column="0" Grid.RowSpan="1"/>
                     <Image Source="historisk_placering.png" Grid.Row="0"/>
                     <Label Text="Historisk placering" FontSize="Medium" TextColor="{StaticResource textColor}" HorizontalOptions="Center" Grid.Row="1" Grid.Column="0" VerticalOptions="Start"/>
                     <Grid.GestureRecognizers>
@@ -89,8 +74,8 @@
                 </Grid>
                 <!--===============================================================-->
 
-                <!--Fifth element in grid-->
-                <Grid Grid.Row="2" Grid.Column="0">
+                <!--Fourth element in grid-->
+                <Grid Grid.Row="1" Grid.Column="1">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="75*" />
                         <RowDefinition Height="25*" />
@@ -104,8 +89,8 @@
                 </Grid>
                 <!--===============================================================-->
 
-                <!--Sixth element in grid-->
-                <Grid Grid.Row="2" Grid.Column="1">
+                <!--Fifth element in grid-->
+                <Grid Grid.Row="2" Grid.Column="0">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="75*" />
                         <RowDefinition Height="25*" />
@@ -119,6 +104,20 @@
                 </Grid>
                 <!--===============================================================-->
 
+                <!--Sixth element in grid-->
+                <Grid Grid.Row="2" Grid.Column="1">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="75*" />
+                        <RowDefinition Height="25*" />
+                    </Grid.RowDefinitions>
+                    <BoxView Color="White" Grid.Column="0" Grid.RowSpan="1"/>
+                    <Image Source="settings.png" Grid.Row="0"/>
+                    <Label Text="Indstillinger" FontSize="Medium" TextColor="{StaticResource textColor}" HorizontalOptions="Center" Grid.Row="1" Grid.Column="0" VerticalOptions="Start"/>
+                    <Grid.GestureRecognizers>
+                        <TapGestureRecognizer Command="{Binding ChangeClubCommand}"/>
+                    </Grid.GestureRecognizers>
+                </Grid>
+                <!--===============================================================-->
             </Grid>
         </StackLayout>
     </ContentPage.Content>
