--- a/FodboldApp/FodboldApp/FodboldApp/View/MatchPage.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/MatchPage.xaml
@@ -43,7 +43,7 @@ xmlns:cv="clr-namespace:CarouselView.FormsPlugin.Abstractions;assembly=CarouselV
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="50"/>
                 </Grid.RowDefinitions>
-                <cv:CarouselViewControl ItemsSource="{Binding CollectionList}" ShowArrows="True" VerticalOptions="FillAndExpand">
+                <cv:CarouselViewControl ItemsSource="{Binding CollectionList}" Position="{Binding PagePosition}" ShowArrows="True" VerticalOptions="FillAndExpand">
                     <cv:CarouselViewControl.ItemTemplate>
                         <DataTemplate>
                             <StackLayout>
@@ -75,21 +75,21 @@ xmlns:cv="clr-namespace:CarouselView.FormsPlugin.Abstractions;assembly=CarouselV
                                   FlowItemsSource="{Binding CollectionList}" SeparatorVisibility="Default" SeparatorColor="Black">
                                     <flv:FlowListView.FlowColumnTemplate>
                                         <DataTemplate>
-                                            <Grid RowSpacing="5">
+                                            <Grid>
                                                 <Grid.RowDefinitions>
-                                                    <RowDefinition Height="*"/>
-                                                    <RowDefinition Height="*"/>
+                                                    <RowDefinition Height="1*"/>
+                                                    <RowDefinition Height="2*"/>
                                                 </Grid.RowDefinitions>
                                                 <Grid.ColumnDefinitions>
-                                                    <ColumnDefinition Width="2.5*"/>
-                                                    <ColumnDefinition Width="20*"/>
+                                                    <ColumnDefinition Width="*"/>
+                                                    <ColumnDefinition Width="5*"/>
                                                 </Grid.ColumnDefinitions>
-                                                <Image Source="{Binding ImageURL}" HorizontalOptions="Start" 
-                                       Grid.Row="0" Grid.Column="0" Aspect="AspectFit" Margin="0,10,0,0" VerticalOptions="Start"/>
+                                                <Image Source="{Binding ImageURL}" 
+                                       Grid.Row="0" Grid.RowSpan="2" Grid.Column="0" Aspect="AspectFit" HeightRequest="60" Margin="0,5,0,0" VerticalOptions="Start"/>
                                                 <Label Text="{Binding UserName}" Grid.Row="0" Grid.Column="1" VerticalOptions="Start" 
-                                       HorizontalOptions="Start" FontSize="Medium" FontAttributes="Bold" HorizontalTextAlignment="Start" Margin="0,10,0,5" />
-                                                <Label Text="{Binding UserComment}" Grid.Row="1" Grid.Column="0" VerticalOptions="Start" 
-                                       HorizontalOptions="StartAndExpand" FontSize="Medium" HorizontalTextAlignment="Start" Grid.ColumnSpan="2" Margin="0,0,0,10" />
+                                       HorizontalOptions="Start" FontSize="Medium" FontAttributes="Bold" HorizontalTextAlignment="Start"/>
+                                                <Label Text="{Binding UserComment}" Grid.Row="1" Grid.Column="1" VerticalOptions="Start" 
+                                       HorizontalOptions="StartAndExpand" FontSize="Medium" HorizontalTextAlignment="Start" Margin="0,-10,0,0"/>
                                             </Grid>
                                         </DataTemplate>
                                     </flv:FlowListView.FlowColumnTemplate>
@@ -104,15 +104,21 @@ xmlns:cv="clr-namespace:CarouselView.FormsPlugin.Abstractions;assembly=CarouselV
                                                BindingContext="{x:Static viewmodels:ViewModelLocator.HeaderVM}"
                                                HorizontalTextAlignment="Center" HorizontalOptions="CenterAndExpand" VerticalTextAlignment="Center" VerticalOptions="CenterAndExpand"/>
                     <Grid IsVisible="{Binding IsUserLoggedIn}" BindingContext="{x:Static viewmodels:ViewModelLocator.HeaderVM}">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="54"/>
+                        </Grid.ColumnDefinitions>
                         <Editor Text="{Binding UserComment, Mode=TwoWay}"
-                                                HorizontalOptions="FillAndExpand"
+                                                HorizontalOptions="FillAndExpand" Grid.Column="0"
                                                 BindingContext="{x:Static viewmodels:ViewModelLocator.MatchPageVM}">
                         </Editor>
-                        <Label Text="Skriv en kommentar" Margin="0,10,0,0"
-                                               HorizontalOptions="StartAndExpand" IsVisible="{Binding LabelIsVisible}" InputTransparent="True"
+                        <Label Text="Skriv en kommentar" Margin="5,15,0,0"
+                                               HorizontalOptions="StartAndExpand" IsVisible="{Binding LabelIsVisible}" Grid.Column="0" InputTransparent="True"
                                                BindingContext="{x:Static viewmodels:ViewModelLocator.MatchPageVM}">
                         </Label>
-                        <Button Text="Send" HorizontalOptions="End" Command="{Binding SendCommentCommand}" VerticalOptions="Center" BindingContext="{x:Static viewmodels:ViewModelLocator.MatchPageVM}">
+                        <Button Text="Send" HorizontalOptions="End" Command="{Binding SendCommentCommand}" 
+                                Grid.Column="1" VerticalOptions="Center" Style="{StaticResource buttonStyle2}"
+                                BindingContext="{x:Static viewmodels:ViewModelLocator.MatchPageVM}" IsVisible="{Binding SendButtonIsVisible}">
                         </Button>
                     </Grid>
                 </StackLayout>
