--- a/FodboldApp/FodboldApp/FodboldApp/View/News.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/News.xaml
@@ -33,7 +33,7 @@
                               VerticalOptions="FillAndExpand">
                 <flv:FlowListView.FlowColumnTemplate>
                     <DataTemplate>
-                        <StackLayout Spacing="0" >
+                        <StackLayout Spacing="0" Margin="10,0,10,0">
                             <Label Text="{Binding Title}"
                        TextColor="#e11e2c"
                        FontSize="Large"
@@ -47,13 +47,13 @@
                        HorizontalOptions="FillAndExpand"
                        HorizontalTextAlignment="Start"
                        BackgroundColor="#ffffff"/>
+                            <Image Source="{Binding ImageURL}" Aspect="AspectFill" HeightRequest="200" Margin="-10,0,-10,0"/>
                             <Label Text="{Binding Resume}"
                        FontSize="Default"
                        FontAttributes="Bold"
                        HorizontalOptions="FillAndExpand"
                        HorizontalTextAlignment="Start"
                        BackgroundColor="#ffffff"/>
-                            <Image Source="{Binding ImageURL}" Aspect="AspectFill" HeightRequest="200"/>
                         </StackLayout>
                     </DataTemplate>
                 </flv:FlowListView.FlowColumnTemplate>
