--- a/FodboldApp/FodboldApp/FodboldApp/View/XamlTemplate/MatchHeaderTemplate.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/XamlTemplate/MatchHeaderTemplate.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:FodboldApp.View.Converter"
              xmlns:viewmodels="clr-namespace:FodboldApp.ViewModel"
+             xmlns:controls="clr-namespace:Plugin.CrossPlatformTintedImage.Abstractions;assembly=Plugin.CrossPlatformTintedImage.Abstractions"
              x:Class="FodboldApp.View.XamlTemplate.MatchHeaderTemplate">
 
     <StackLayout.Resources>
@@ -10,21 +11,10 @@
             <local:BooleanReverser x:Key="booleanReverser"/>
         </ResourceDictionary>
     </StackLayout.Resources>
-    <!--<ResourceDictionary>
-        <local:BooleanReverser x:Key="booleanReverser"/>
-    </ResourceDictionary>-->
+
 
     <StackLayout IsVisible="{Binding Live,  Converter={StaticResource booleanReverser}}" HorizontalOptions="FillAndExpand" BindingContext="{x:Static viewmodels:ViewModelLocator.MatchHeaderVM}">
-        <!--<StackLayout.Resources>
-            <ResourceDictionary>
-                <local:BooleanReverser x:Key="booleanReverser"/>
-            </ResourceDictionary>
-        </StackLayout.Resources>-->
-
-        <!--<StackLayout.BindingContext>
-            <viewmodels:MatchHeaderVM/>
-        </StackLayout.BindingContext>-->
-        <Label Text="NÆSTE KAMP"
+            <Label Text="NÆSTE KAMP"
                    HorizontalOptions="FillAndExpand"
                    HorizontalTextAlignment="Center"
                    FontSize="Large"
@@ -32,35 +22,46 @@
                    VerticalTextAlignment="Center"
                    TextColor="{StaticResource textColor}"
                    BackgroundColor="#F0F0F0"/>
-        <Label Text="{Binding Teams}"
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="6*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <controls:TintedImage Source="notificationsbell.png" WidthRequest="50" TintColor="{Binding BellColor}" VerticalOptions="Center" Grid.Column="0" Margin="25, 0, 0, 0"/>
+            <controls:TintedImage.GestureRecognizers>
+                    <TapGestureRecognizer Command="{Binding SubscribeToNotifications}"/>
+            </controls:TintedImage.GestureRecognizers>
+            <StackLayout HorizontalOptions="FillAndExpand" Grid.Column="1">
+                <Label Text="{Binding Teams}"
                    TextColor="{StaticResource textColor}"
                    FontSize="Large"
                    FontAttributes="Bold"
                    HorizontalOptions="FillAndExpand"
                    HorizontalTextAlignment="Center"
                    BackgroundColor="#ffffff"/>
-        <Label Text="{Binding DateTime}"
+                <Label Text="{Binding DateTime}"
                    TextColor="#e11e2c"
                    FontSize="Large"
                    HorizontalOptions="FillAndExpand"
                    HorizontalTextAlignment="Center"
                    BackgroundColor="#ffffff"/>
-        <Label Text="{Binding Location}"
+                <Label Text="{Binding Location}"
                    TextColor="{StaticResource textColor}"
                    FontSize="Large"
                    HorizontalOptions="FillAndExpand"
                    HorizontalTextAlignment="Center"
                    BackgroundColor="#ffffff"/>
-        <Label Text="{Binding Division}"
+                <Label Text="{Binding Division}"
                    TextColor="#b9b8b8"
                    HorizontalOptions="FillAndExpand"
                    HorizontalTextAlignment="Center"
                    BackgroundColor="#ffffff"/>
+            </StackLayout>
+        </Grid>
     </StackLayout>
     <StackLayout IsVisible="{Binding Live}" HorizontalOptions="FillAndExpand" BindingContext="{x:Static viewmodels:ViewModelLocator.MatchHeaderVM}">
-        <!--<StackLayout.BindingContext>
-            <viewmodels:MatchHeaderVM/>
-        </StackLayout.BindingContext>-->
         <Label Text="LIVE"
                    HorizontalOptions="FillAndExpand"
                    HorizontalTextAlignment="Center"
