--- a/FodboldApp/FodboldApp/FodboldApp/View/MatchPage.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/MatchPage.xaml
@@ -48,8 +48,11 @@ xmlns:cv="clr-namespace:CarouselView.FormsPlugin.Abstractions;assembly=CarouselV
                         <DataTemplate>
                             <StackLayout>
                                 <flv:FlowListView x:Name="flowListView" FlowColumnCount="1" Grid.Row="0"
-                                  SeparatorVisibility="None" HasUnevenRows="True"  IsVisible="{Binding ListSwitch}"
+                                  SeparatorVisibility="None" HasUnevenRows="False"  IsVisible="{Binding ListSwitch}"
                                   FlowItemsSource="{Binding CollectionList}" BackgroundColor="White" >
+                                    <x:Arguments>
+                                        <ListViewCachingStrategy>RetainElement</ListViewCachingStrategy>
+                                    </x:Arguments>
                                     <flv:FlowListView.FlowColumnTemplate>
                                         <DataTemplate>
                                             <Grid ColumnSpacing="0">
@@ -73,6 +76,9 @@ xmlns:cv="clr-namespace:CarouselView.FormsPlugin.Abstractions;assembly=CarouselV
                                 <flv:FlowListView x:Name="flowListView2" FlowColumnCount="1" BackgroundColor="White"
                                   HasUnevenRows="True" HeightRequest="180" IsVisible="{Binding ListSwitch, Converter={StaticResource booleanReverser}}" Grid.Row="0"
                                   FlowItemsSource="{Binding CollectionList}" SeparatorVisibility="Default" SeparatorColor="Black">
+                                    <x:Arguments>
+                                        <ListViewCachingStrategy>RetainElement</ListViewCachingStrategy>
+                                    </x:Arguments>
                                     <flv:FlowListView.FlowColumnTemplate>
                                         <DataTemplate>
                                             <Grid>
