--- a/FodboldApp/FodboldApp/FodboldApp/View/FormerPlayers.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/FormerPlayers.xaml
@@ -27,11 +27,11 @@
                    BackgroundColor="#f0f0f0"/>
 
             <flv:FlowListView x:Name="flowListView" FlowItemTappedCommand="{Binding PlayerDescriptionCommand}" FlowColumnCount="1" SeparatorVisibility="None" HasUnevenRows="True"
-			   FlowItemsSource="{Binding PlayersList}">
+			   FlowItemsSource="{Binding PlayersList}" FlowLastTappedItem="{Binding SelectedItem}">
                 <flv:FlowListView.FlowColumnTemplate>
                     <DataTemplate>
                         <Grid ColumnSpacing="0">
-                            <Label Text="{Binding Player}" HeightRequest="50" FontSize="Medium" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" BackgroundColor="{Binding Index, Converter={StaticResource colorConvert}}"/>
+                            <Label Text="{Binding Name}" HeightRequest="50" FontSize="Medium" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" BackgroundColor="{Binding Index, Converter={StaticResource colorConvert}}"/>
                         </Grid>
                     </DataTemplate>
                 </flv:FlowListView.FlowColumnTemplate>
