--- a/FodboldApp/FodboldApp/FodboldApp/View/MatchPage.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/MatchPage.xaml
@@ -73,7 +73,7 @@ xmlns:cv="clr-namespace:CarouselView.FormsPlugin.Abstractions;assembly=CarouselV
                                     </flv:FlowListView.FlowColumnTemplate>
                                 </flv:FlowListView>
 
-                                <flv:FlowListView x:Name="flowListView2" FlowColumnCount="1" BackgroundColor="White"
+                                <flv:FlowListView x:Name="flowListView2" FlowColumnCount="1" BackgroundColor="White" FlowItemTappedCommand="{Binding DeleteCommentCommand}" FlowLastTappedItem="{Binding TappedItem, Mode=TwoWay}"
                                   HasUnevenRows="{Binding ListSwitch, Converter={StaticResource booleanReverser}}" HeightRequest="180" IsVisible="{Binding ListSwitch, Converter={StaticResource booleanReverser}}" Grid.Row="0"
                                   FlowItemsSource="{Binding CollectionList}" SeparatorVisibility="Default" SeparatorColor="Black">
                                     <x:Arguments>
