--- a/FodboldApp/FodboldApp/FodboldApp/View/NewsPage.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/NewsPage.xaml
@@ -26,7 +26,7 @@
                        HorizontalTextAlignment="Start"/>
                 <Image Source="{Binding ImageURL}" Aspect="AspectFill" Margin="-10,0,0,0"/>
                 <Label Text="{Binding NewsText}" Margin="0, 0, 10, 0"/>
-                <Image Source="share_button" HorizontalOptions="Start" VerticalOptions="Center">
+                <Image Source="share_button" HorizontalOptions="Start" VerticalOptions="Center" HeightRequest="20" Margin="0,10,0,0">
                     <Image.GestureRecognizers>
                         <TapGestureRecognizer Command="{Binding ShareCommand}"/>
                     </Image.GestureRecognizers>
