--- a/FodboldApp/FodboldApp/FodboldApp/View/MatchPage.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/MatchPage.xaml
@@ -47,7 +47,7 @@ xmlns:cv="clr-namespace:CarouselView.FormsPlugin.Abstractions;assembly=CarouselV
                     <cv:CarouselViewControl.ItemTemplate>
                         <DataTemplate>
                             <StackLayout>
-                                <flv:FlowListView x:Name="flowListView" FlowColumnCount="1" Grid.Row="0"
+                                <flv:FlowListView FlowColumnCount="1" Grid.Row="0"
                                   SeparatorVisibility="None" HasUnevenRows="{Binding ListSwitch}"  IsVisible="{Binding ListSwitch}"
                                   FlowItemsSource="{Binding CollectionList}" BackgroundColor="White" >
                                     <x:Arguments>
@@ -73,7 +73,7 @@ xmlns:cv="clr-namespace:CarouselView.FormsPlugin.Abstractions;assembly=CarouselV
                                     </flv:FlowListView.FlowColumnTemplate>
                                 </flv:FlowListView>
 
-                                <flv:FlowListView x:Name="flowListView2" FlowColumnCount="1" BackgroundColor="White" FlowItemTappedCommand="{Binding DeleteCommentCommand}" FlowLastTappedItem="{Binding TappedItem, Mode=TwoWay}"
+                                <flv:FlowListView FlowColumnCount="1" BackgroundColor="White" FlowItemTappedCommand="{Binding DeleteCommentCommand}" FlowLastTappedItem="{Binding TappedItem, Mode=TwoWay}"
                                   HasUnevenRows="{Binding ListSwitch, Converter={StaticResource booleanReverser}}" HeightRequest="180" IsVisible="{Binding ListSwitch, Converter={StaticResource booleanReverser}}" Grid.Row="0"
                                   FlowItemsSource="{Binding CollectionList}" SeparatorVisibility="Default" SeparatorColor="Black">
                                     <x:Arguments>
@@ -92,8 +92,10 @@ xmlns:cv="clr-namespace:CarouselView.FormsPlugin.Abstractions;assembly=CarouselV
                                                 </Grid.ColumnDefinitions>
                                                 <Image Source="{Binding ImageURL}" 
                                        Grid.Row="0" Grid.RowSpan="2" Grid.Column="0" Aspect="AspectFit" HeightRequest="60" Margin="0,5,0,0" VerticalOptions="Start"/>
-                                                <Label Text="{Binding UserName}" Grid.Row="0" Grid.Column="1" VerticalOptions="Start" 
-                                       HorizontalOptions="Start" FontSize="Medium" FontAttributes="Bold" HorizontalTextAlignment="Start"/>
+                                                <StackLayout Grid.Row="0" Grid.Column="1" Orientation="Horizontal">
+                                                    <Label Text="{Binding UserName}" FontSize="Medium" FontAttributes="Bold" HorizontalTextAlignment="Start"/>
+                                                    <Image Source="verified.png" HeightRequest="15" HorizontalOptions="Start" IsVisible="{Binding IsVerified}"/>
+                                                </StackLayout>
                                                 <Label Text="{Binding UserComment}" Grid.Row="1" Grid.Column="1" VerticalOptions="Start" 
                                        HorizontalOptions="StartAndExpand" FontSize="Medium" HorizontalTextAlignment="Start" Margin="0,-10,0,0"/>
                                             </Grid>
