--- a/FodboldApp/FodboldApp/FodboldApp/View/News.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/News.xaml
@@ -27,9 +27,9 @@
                    BackgroundColor="#f0f0f0"
                    HeightRequest="38"/>
 
-            <flv:FlowListView x:Name="flowListView" FlowLastTappedItem="{Binding SelectedItem, Mode=TwoWay}"
+            <flv:FlowListView FlowLastTappedItem="{Binding SelectedItem, Mode=TwoWay}"
                               FlowItemTappedCommand="{Binding NewsCommand}" FlowItemsSource="{Binding NewsList}"
-                              FlowColumnCount="1" SeparatorVisibility="Default" HasUnevenRows="True" SeparatorColor="Black"
+                              FlowColumnCount="1" SeparatorVisibility="None" HasUnevenRows="True" SeparatorColor="Black"
                               VerticalOptions="FillAndExpand">
                 <flv:FlowListView.FlowColumnTemplate>
                     <DataTemplate>
