--- a/FodboldApp/FodboldApp/FodboldApp/View/Matches.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/Matches.xaml
@@ -16,8 +16,16 @@
                 <viewmodels:MatchesVM/>
             </StackLayout.BindingContext>
 
-            <xamltemp:MatchHeaderTemplate/>
-
+            <StackLayout>
+                <StackLayout.HeightRequest>
+                    <OnPlatform x:TypeArguments="x:Double">
+                        <OnPlatform.iOS>300</OnPlatform.iOS>
+                        <OnPlatform.Android>200</OnPlatform.Android>
+                    </OnPlatform>
+                </StackLayout.HeightRequest>
+                <xamltemp:MatchHeaderTemplate/>
+            </StackLayout>
+            
             <Label Text="SENESTE RESULTATER"
                    TextColor="{StaticResource textColor}"
                    FontSize="Large"
