--- a/FodboldApp/FodboldApp/FodboldApp/View/News.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/News.xaml
@@ -16,7 +16,15 @@
                 <viewmodels:NewsVM/>
             </StackLayout.BindingContext>
 
-            <xamltemp:MatchHeaderTemplate/>
+            <StackLayout>
+                <StackLayout.HeightRequest>
+                    <OnPlatform x:TypeArguments="x:Double">
+                        <OnPlatform.iOS>300</OnPlatform.iOS>
+                        <OnPlatform.Android>200</OnPlatform.Android>
+                    </OnPlatform>
+                </StackLayout.HeightRequest>
+                <xamltemp:MatchHeaderTemplate/>
+            </StackLayout>
 
             <Label Text="NYHEDER"
                    TextColor="{StaticResource textColor}"
